# kausal-watch

./: .coveragerc  .cursorignore  .dockerignore  .env.test  .git-blame-ignore-revs  .gitattributes  .gitignore  .mypy-baseline.txt  .pre-commit-config.yaml  .reviewdog.yml  CLAUDE.md  README.md  apollo.config.js  conftest.py  docker-compose.local.yml  docker-compose.yml  fnox.toml  graphql.config.yaml  manage.py  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  prek.toml  publiccode.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-kausal.txt  requirements-lint.in  requirements-lint.txt  requirements-prod.in  requirements-prod.txt  requirements-test.in  requirements.in  requirements.txt  review.md  run_tests.py
.claude/: settings.json
.github/: pull_request_template.md
.github/workflows/: admin-e2e-tests.yaml  ci.yaml  reviewdog.yml  test.yaml
.grit/: grit.yaml
.grit/patterns/: import_from_typing.md
actions/: action_admin.py  action_admin_mixins.py  action_fields.py  action_status_summary.py  api.py  apps.py  attribute_type_admin.py  attributes.py  autocomplete.py  category_admin.py  chooser.py  context_processors.py  defaults.py  deferred_ops.py  export.py  graphql_admin_schema.py  mail.py  monitoring_quality.py  mutations.py  mutations_action.py  permission_policy.py  perms.py  pledge_admin.py  schema.py  signals.py  tasks.py  wagtail_admin.py  wagtail_hooks.py
actions/blocks/: __init__.py  action_content.py  action_content_blocks.py  action_dashboard.py  action_list.py  base.py  category_list.py  category_page_layout.py  choosers.py  column_block_base.py  filters.py  mixins.py  paths_content.py  stream_block.py
actions/migrations/: 0001_initial.py  0002_auto_20210929_0037.py  0018_migrate_plan_features.py  0020_action_attributes.py  0023_add_plan_published_archived_fields.py  0029_refactor_category_icons.py  0032_minor_changes.py  0037_add_category_type_short_description_field.py  0048_hide_identifiers_to_common_ct.py  0053_report_reporttype.py  0077_auto_non_schema_migrations.py  0085_attribute_type_permissions_sane_defaults.py  0087_fix_category_type_editable_by.py  0088_auto_20230907_1400.py  0089_wagtail_workflows.py  0096_add_i18n_to_action_links.py  0107_auto_20240225_1617.py  0115_add_primary_language_lowercase.py  0122_rename_action_plan_order_actions_act_plan_id_35d9e2_idx_and_more.py  0126_plandomain_deployment_environment_and_more.py  0128_alter_deployment_environment_types.py  0129_migrate_dep_env_testing_to_preview.py  0130_alter_attributetype_other_languages_and_more.py  0131_category_kausal_paths_node_uuid_and_more.py  0132_planfeatures_admin_accessibility_conformance_level.py  0133_plan_short_identifier.py  0134_create_equivalent_through_models.py  0135_action_copy_of_plan_copy_of_and_more.py  0136_alter_plan_organization_alter_plan_short_identifier.py  0137_plan_exclude_from_search_alter_categorylevel_i18n.py  0140_alter_actionimplementationphase_color_and_more.py  (+35 more)
admin_site/: api.py  apps.py  backends.py  chooser.py  context_processors.py  draftail_other_lang_button.py  draftail_rich_text_area.py  filters.py  forms.py  menu.py  mixins.py  models.py  msgraph.py  panels.py  permissions.py  signals.py  urls.py  utils.py  views.py  viewsets.py  wagtail.py  wagtail_admin.py  wagtail_hooks.py
aplans/: asgi.py  cache.py  celery.py  context_vars.py  dataset_config.py  dynamic_blocks.py  email_sender.py  error_handling.py  extensions.py  factories.py  field_registry.py  fields.py  gql.py  graphene_views.py  graphql_errors.py  graphql_gis.py  graphql_helpers.py  graphql_interfaces.py  graphql_types.py  graphql_views.py  log_handler.py  middleware.py  openapi.py  permissions.py  rest_api.py  schema.py  schema_context.py  settings.py  types.py  urls.py  utils.py  wagtail_embed_finders.py  wagtail_utils.py  watchfiles_reloader.py  wsgi.py
audit_logging/: blocks.py  migration_operations.py  models.py  utils.py  views.py  wagtail_hooks.py
budget/: api.py  apps.py  models.py  schema.py  wagtail_admin.py
content/: api.py  apps.py  models.py  wagtail_admin.py
copying/: apps.py  main.py  tasks.py  utils.py  views.py
datasets/: permission_policy.py  schema.py
docs/: unit-tests.md
documentation/: models.py  views.py  wagtail_hooks.py
documents/: apps.py  chooser.py  forms.py  models.py  permissions.py  rich_text.py
e2e-tests/: .gitignore  apollo.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
feedback/: models.py  schema.py  views.py  wagtail_admin.py  wagtail_hooks.py
images/: apps.py  chooser.py  forms.py  image_formats.py  models.py  permissions.py  processors.py  rich_text.py  schema.py  wagtail_hooks.py
indicators/: api.py  autocomplete.py  blocks.py  chooser.py  computation.py  models.py  panels.py  permission_policy.py  resources.py  rich_text.py  schema.py  tasks.py  wagtail_admin.py  wagtail_hooks.py
insight/: api.py  generator.py
locale/: django.pot
mcp_server/: ariadne-codegen.toml  auth.py  base_graphql_client.py  generated_base.py  mcp_client_tool.py  queries.graphql  server.py  turms_plugins.py
notifications/: __init__.py  engine.py  forms.py  mjml.py  models.py  notifications.py  queue.py  recipients.py  tasks.py  wagtail_admin.py  wagtail_hooks.py
orgs/: autocomplete.py  chooser.py  forms.py  models.py  mutations.py  schema.py  views.py  wagtail_admin.py
pages/: apps.py  blocks.py  models.py  page_interface.py  schema.py  wagtail_admin.py
paths_integration/: ariadne-codegen.toml  indicators.py  queries.graphql
people/: apps.py  autocomplete.py  chooser.py  models.py  override_django_translations.py  schema.py  views.py  wagtail_admin.py  wagtail_hooks.py
reports/: autocomplete.py  chooser.py  export.py  graphene_types.py  models.py  report_formatters.py  schema.py  types.py  utils.py  views.py  wagtail_admin.py
request_log/: middleware.py  models.py
search/: backends.py  context.py  models.py  schema.py
templates/: 500.html  500_admin.html
users/: apps.py  base.py  managers.py  models.py  perms.py  pipeline.py  schema.py  views.py
(+386 files in other folders)
