[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "kausal-watch"
requires-python = ">= 3.13"
version = "1.0.0"
dependencies = [
    "aniso8601>=10.0.0",
    "asgi-cors>=1.0.1",
    "babel>=2.17.0",
    "celery>=5.4.0",
    "channels>=4.2.2",
    "channels-redis>=4.3.0",
    "coreapi>=2.3.3",
    "cryptography>=44.0.2",
    "dal-admin-filters>=1.1.0",
    "diffsync>=2.0.1",
    "django>=5.2",
    "django-anymail[mailgun,mailjet,sendgrid]>=13.0",
    "django-autocomplete-light>=3.12.1",
    "django-autoslug>=1.9.9",
    "django-cors-headers>=4.7.0",
    "django-countries>=7.6.1",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "django-hijack>=3.7.1",
    "django-image-cropping>=1.7",
    "django-import-export>=4.3.7",
    "django-modeltrans",
    "django-npm>=1.0.0",
    "django-oauth-toolkit>=2.3.0",
    "django-parler>=2.3",
    "django-redis>=5.4.0",
    "django-relations-iterator>=0.0.5",
    "django-reversion>=5.1.0",
    "django-storages[s3]>=1.14.6",
    "django-stubs-ext>=5.2.2",
    "djangorestframework>=3.16.0",
    "dnspython>=2.7.0",
    "drf-nested-routers>=0.94.1",
    "drf-spectacular>=0.28.0",
    "easy-thumbnails>=2.10",
    "elasticsearch>=7.0.0,<8.0.0",
    "elasticsearch-dsl<8.0.0",
    "factory-boy>=3.3.3",
    "graphene-django>=3.2.3",
    "graphene-django-optimizer",
    "graphene-pydantic>=0.6.1",
    "graphql-core>=3.2.0",
    "graphql-relay>=3.2.0",
    "html2text>=2025.4.15",
    "humanize>=4.12.2",
    "jinja2>=3.1.6",
    "libvoikko>=4.3",
    "logfmter>=0.0.9",
    "loguru>=0.7.3",
    "lxml>=5.3.2",
    "markdown>=3.8",
    "nanoid==2.0.0",
    "networkx>=3.4.2",
    "opentelemetry-exporter-otlp-proto-http>=1.36.0",
    "opentelemetry-exporter-prometheus>=0.57b0",
    "opentelemetry-instrumentation-django>=0.57b0",
    "opentelemetry-instrumentation-psycopg>=0.57b0",
    "opentelemetry-instrumentation-redis>=0.57b0",
    "opentelemetry-instrumentation-threading>=0.57b0",
    "opentelemetry-sdk>=1.36.0",
    "orjson>=3.11.2",
    "pillow>=11.2.1",
    "polars[xlsx2csv]>=1.27.1",
    "psutil>=7.0.0",
    "psycopg[pool]>=3.2.6",
    "pycryptodome>=3.19.0",
    "pygithub>=2.6.1",
    "pygments-graphql>=1.0.0",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "pytest-env>=1.1.5",
    "pytest-factoryboy>=2.7.0",
    "pytest-html>=4.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.31",
    "rich>=14.0.0",
    "s3cmd>=2.4.0",
    "sentry-sdk[opentelemetry]>=2.34.1",
    "setuptools<80",
    "social-auth-app-django>=5.4.3",
    "starlette>=0.47.2",
    "strawberry-graphql>=0.278.0",
    "strawberry-graphql-django>=0.65.0",
    "tinycss2>=1.4.0",
    "treelib>=1.7.1",
    "tzdata>=2025.2",
    "unidecode>=1.3.8",
    "uritemplate>=4.1.1",
    "uuid-utils==0.10.0",
    "uvicorn>=0.35.0",
    "wagtail>=6.4.1",
    "wagtail-autocomplete>=0.12.0",
    "wagtail-color-panel>=1.6.0",
    "wagtail-generic-chooser>=0.6.1",
    "wagtail-grapple>=0.29.0",
    "wagtail-localize>=1.11.3",
    "wagtail-modeladmin>=2.1.0",
    "wagtail-orderable>=1.2.0",
    "wagtailgeowidget>=8.2.1",
    "xlsxwriter>=3.2.2",
]

[project.optional-dependencies]
kausal = [
    "kausal-watch-extensions>=0.1.156",
]

[tool.ruff]
extend = "./kausal_common/configs/ruff.toml"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "aplans.settings"
norecursedirs = [
  ".*",
  ".direnv",
  ".git",
  ".mypy_cache",
  "**/media",
  "**/static",
  "**/templates",
  "Attic",
  "data",
  "node_modules",
  "venv",
]
filterwarnings = ["ignore::DeprecationWarning:easy_thumbnails"]
testpaths = ["**/tests"]
env = [
  "ENV_FILE=.env.test",
]

[tool.mypy]
plugins = [
  "mypy_django_plugin.main",
  "pydantic.mypy",
]
mypy_path = "$MYPY_CONFIG_FILE_DIR/kausal_common/typings"
exclude = [
  "/migrations/",
  "^Attic/",
  "^local_settings\\.py$",
  "^typings/",
  "^kausal_common/deployment/gunicorn\\.py$",
  "node_modules",
  #"^kausal_common/typings/",
]
check_untyped_defs = true
cache_fine_grained = true
explicit_package_bases = true
strict_optional = true
fixed_format_cache = true
always_true = ['IS_WATCH']
always_false = ['IS_PATHS']

[[tool.mypy.overrides]]
module = [
  "anymail.*",
  "colored.*",
  "channels.*",
  "dal_admin_filters.*",
  "dal.*",
  "debug_toolbar.*",
  "django_filters.*",
  "django_filters.*",
  "dvc_pandas.*",
  "easy_thumbnails.*",
  "elasticsearch_dsl.*",
  "environ.*",
  "factory.*",
  "generic_chooser.*",
  "graphene_django_optimizer.*",
  "graphene_django.*",
  "grapple.*",
  "gunicorn.*",
  "import_export.*",
  "laces.*",
  "modelcluster.*",
  "modeltrans.*",
  "nanoid.*",
  "networkx.*",
  "oauth2_provider.*",
  "opentelemetry.*",
  "permissionedforms.*",
  "pint_pandas.*",
  "pint.*",
  "plotext.*",
  "rest_framework_nested.*",
  "reversion.*",
  "rustface.*",
  "social_core.*",
  "social_django.*",
  "storages.*",
  "taggit.*",
  "tinycss2.*",
  "traitlets.*",
  "uwsgidecorators.*",
  "viztracer.*",
  "wagtail_localize.*",
  "wagtail_modeladmin.*",
  "wagtail.*",
  "wagtailautocomplete.*",
  "wagtailgeowidget.*",
  "wagtailorderable.*",
  "willow.*",
  "xlsxwriter.*",
]
ignore_missing_imports = true

[tool.mypy-baseline]
baseline_path = ".mypy-baseline.txt"
preserve_position = false
sort_baseline = true

[tool.pyright]
exclude = [
  ".*",
  "**/__pycache__",
  "**/migrations",
  "**/node_modules",
  "Attic/",
  "local_settings.py",
]
stubPath = "kausal_common/typings"
deprecateTypingAliases = true
reportAny = false
reportAttributeAccessIssue = "error"
reportConstantRedefinition = false
reportExplicitAny = false
reportIgnoreCommentWithoutRule = false
reportImplicitOverride = false
reportImplicitStringConcatenation = false
reportImportCycles = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportMissingParameterType = false
reportMissingTypeStubs = "information"
reportPrivateImportUsage = false
reportPrivateUsage = false
reportUnannotatedClassAttribute = false
reportUninitializedInstanceVariable = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryComparison = "information"
reportUnnecessaryIsInstance = false
reportUnreachable = false
reportUnsafeMultipleInheritance = "information"
reportUnusedCallResult = false
reportUnusedImport = false
defineConstant = { 'IS_PATHS' = false, 'IS_WATCH' = true }


[tool.django-stubs]
django_settings_module = "aplans.settings"

[tool.setuptools]
include-package-data = false
py-modules = []

[tool.uv]
environments = [
  "python_full_version >= '3.13' and sys_platform == 'linux' and platform_machine == 'x86_64'",
  "python_full_version >= '3.13' and sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "kausal"
url = "https://pypi.kausal.tech"
authenticate = "always"

[tool.uv.sources]
graphene-django-optimizer = { url = "https://github.com/kausaltech/graphene-django-optimizer/archive/f18d827d0d58c1148288b6b886c167dd2fc1931a.zip" }
django-modeltrans = { url = "https://github.com/kausaltech/django-modeltrans/archive/a734040c3f38c2e404a61dc0be2c017874a9ea45.zip" }
kausal-paths-extensions = { index = "kausal"}

[dependency-groups]
dev = [
    "daphne>=4.2.1",
    "django-debug-toolbar>=6.0.0",
    "ipdb>=0.13.13",
    "ipython>=9.6.0",
    "pdbpp>=0.11.7",
    "pre-commit>=4.3.0",
    "uv>=0.9.2",
    "viztracer>=1.0.4",
    "watchfiles>=1.1.0",
]
kausal = [
    "kausal-watch-extensions==0.1.156",
]
lint = [
    "celery-stubs>=0.1.3",
    "django-stubs>=5.2.5",
    "djangorestframework-stubs>=3.16.4",
    "graphene-stubs>=0.16",
    "isort>=7.0.0",
    "mypy-baseline>=0.7.3",
    "mypy[faster-cache]>=1.18.2",
    "ondivi>=0.7.2",
    "ruff>=0.14.0",
    "types-oauthlib>=3.3.0.20250822",
    "types-psutil>=7.0.0.20251001",
    "types-python-dateutil>=2.9.0.20251008",
    "types-uwsgi>=2.0.0.20250809",
]
prod = [
    "gunicorn>=23.0.0",
    "rustface>=0.1.0",
    "uvicorn-worker>=0.3.0",
    "uvicorn[standard]>=0.35.0",
]
